# Skyhook

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: benchmarking.md
examples/: config.yaml
skyhook/: __init__.py  analysis.py  artifacts.py  astextract.py  cli.py  config.py  grammars.py  graphstore.py  mcp_server.py  model.py  render.py  resolve.py  route.py  scanner.py  schema.py  wire.py
skyhook/queries/elixir/: calls.scm  imports.scm  tags.scm
skyhook/queries/go/: calls.scm  imports.scm  package.scm  tags.scm
skyhook/queries/java/: calls.scm  imports.scm  package.scm  tags.scm
skyhook/queries/javascript/: calls.scm  imports.scm  tags.scm
skyhook/queries/kotlin/: calls.scm  imports.scm  package.scm  tags.scm
skyhook/queries/python/: calls.scm  imports.scm
skyhook/queries/swift/: calls.scm  imports.scm  tags.scm
skyhook/queries/typescript/: tags.scm
tests/: test_astextract.py  test_cli.py  test_config.py  test_graphstore.py  test_mcp.py  test_model.py  test_resolve.py  test_scanner.py  test_wire.py
