[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skyhook"
version = "0.1.0"
description = "Lightweight agent-orientation maps for code and documentation."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Kaleb Keith"},
]
keywords = ["agents", "codebase", "documentation", "orientation", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
skyhook = "skyhook.cli:main"

[tool.setuptools.packages.find]
include = ["skyhook*"]

