[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skyhook-graph"
version = "0.2.0"
description = "Lightweight agent-orientation maps and AST code graphs for code and documentation."
readme = "README.md"
# tree-sitter >= 0.25 (a core dependency) requires Python >= 3.10.
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Kaleb Keith"},
]
keywords = ["agents", "codebase", "documentation", "orientation", "cli", "tree-sitter", "code-graph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "tree-sitter>=0.25,<0.26",
  "tree-sitter-python>=0.23",
  "tree-sitter-swift>=0.6",
  "tree-sitter-java>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
  "tree-sitter-go>=0.23",
  "tree-sitter-elixir>=0.3",
  "tree-sitter-kotlin>=1.1",
]

[project.optional-dependencies]
# The MCP server (`skyhook mcp`) needs the `mcp` SDK, which requires Python >=3.10.
# Kept optional so the graph/CLI core stays lean; query the graph via
# `skyhook graph query` without it.
mcp = ["mcp>=1.2"]

[project.scripts]
skyhook = "skyhook.cli:main"

[tool.setuptools.packages.find]
include = ["skyhook*"]

[tool.setuptools.package-data]
skyhook = ["queries/**/*.scm"]
